fixed some spacing issues in the mobile-desktop version & changed colors for hover text on expanded nav

--- a/css/index.css
+++ b/css/index.css
@@ -192,8 +192,8 @@ body .overlay {
   z-index: 8;
   left: 0;
   top: 0;
-  background-color: #000000;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #5E9FB9;
+  background-color: rgba(155, 165, 175, 0.9);
   overflow-x: hidden;
   transition: 0.5s;
 }
@@ -208,13 +208,14 @@ body .overlay a {
   padding: 8px;
   text-decoration: none;
   font-size: 36px;
-  color: orange;
+  color: white;
   display: block;
+  font-weight: bold;
   transition: 0.3s;
 }
 body .overlay a:hover,
 body .overlay a:focus {
-  color: green;
+  color: #222222;
 }
 body .overlay .closebtn {
   position: absolute;
@@ -234,7 +235,7 @@ body .overlay .closebtn {
 }
 body .header-container {
   display: flex;
-  background-color: teal;
+  background-color: #828282;
   color: white;
   width: 100%;
   height: 50px;
@@ -248,6 +249,11 @@ body .header-container .logo {
   position: absolute;
   margin: 0;
   left: 80px;
+}
+@media (max-width:400px) {
+  body .header-container .logo {
+    left: 30px;
+  }
 }
 body .header-container .menu-button {
   position: absolute;
@@ -292,13 +298,25 @@ body .hero-image {
   background-size: cover;
   position: relative;
 }
+body .hero-image-service {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: url(../img/services/services-jumbotron.png);
+  /* Set a specific height */
+  height: 200px;
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 body .hero-text {
   position: relative;
   top: 60%;
 }
 @media (max-width:400px) {
   body .hero-text {
-    position: absolute;
+    position: relative;
+    padding-top: 98px;
     top: -11%;
   }
 }
@@ -309,11 +327,15 @@ body .hero-text {
     width: 385px;
   }
 }
+body .projects {
+  padding: 0px 217px;
+  padding-bottom: 98px;
+}
 @media (max-width:400px) {
   body .projects {
     padding: 0 15px;
     padding-top: 1px;
-    padding-bottom: 1px;
+    padding-bottom: 48px;
   }
 }
 body h1 {
@@ -335,8 +357,7 @@ body h2 {
 body h3 {
   position: relative;
   background-color: #D8D8D8;
-  padding: 20px;
-  border: 1px solid red;
+  padding: 34px 56px;
   bottom: 48px;
   display: inline-flex;
 }
@@ -346,7 +367,6 @@ body h3 {
     position: relative;
     background-color: #D8D8D8;
     padding: 37px 93px;
-    border: 1px solid orange;
     bottom: 18px;
     display: inline-flex;
   }
@@ -554,6 +574,9 @@ h4 {
   margin: 0 auto;
   margin-top: 2%;
 }
+.home-2 .recent {
+  padding-bottom: 44px;
+}
 @media (max-width:400px) {
   .home-2 {
     max-width: 868px;
@@ -562,16 +585,33 @@ h4 {
     margin-top: 0;
   }
 }
+.home-2 .vs {
+  left: 68%;
+}
+@media (max-width:400px) {
+  .home-2 .vs {
+    left: 24px;
+  }
+}
+.home-2 .blocks {
+  left: 504px;
+  position: relative;
+  background-color: #D8D8D8;
+  padding: 37px 93px;
+  bottom: 48px;
+  display: inline-flex;
+}
+@media (max-width:400px) {
+  .home-2 .blocks {
+    left: 24px;
+    bottom: 18px;
+  }
+}
 .text-img-box {
   display: flex;
-  border: 1px red solid;
 }
 .text-box {
-  border: 3px pink dashed;
   padding-right: 15px;
-}
-.img-box {
-  border: 3px blue dashed;
 }
 .section {
   width: 100%;
