--- a/less/home-page.less
+++ b/less/home-page.less
@@ -107,6 +107,10 @@
 
 }
 .home-2{
+  .recent{
+    // border: 1px solid orange;
+    padding-bottom: 44px;
+  }
   max-width: 868px;
   width: 100%;
   margin: 0 auto;
@@ -117,5 +121,24 @@
     margin: 0 ;
     margin-top: 0;
 
+  }
+  .vs{
+    left: 68%;
+    @media @phone{
+      left: 24px;
+    }
+  }
+  .blocks{
+    left: 504px;
+    position: relative;
+    background-color: #D8D8D8;
+    padding: 37px 93px;
+    // border: 1px solid pink;
+    bottom: 48px;
+    display: inline-flex;
+    @media @phone{
+      left: 24px;
+      bottom: 18px;
+    }
   }
 }
