--- a/less/services.less
+++ b/less/services.less
@@ -8,14 +8,14 @@
 
 .text-img-box{
   display: flex;
-  border: 1px red solid;
+  // border: 1px red solid;
 }
 .text-box{
-  border: 3px pink dashed;
+  // border: 3px pink dashed;
   padding-right: 15px;
 }
 .img-box{
-  border: 3px blue dashed;
+  // border: 3px blue dashed;
 }
 
 
